# farm_app_api

./: .dockerignore  .gitignore  Dockerfile  auth_utils.py  database.py  docker-compose.yaml  init.sh  main.py  pyproject.toml
routers/: route_auth.py  route_todo.py
src/: schemas.py
src/routers/: route_auth.py
